# coursework_6

./: .env_example  README.md  client.json  pyproject.toml
blog/: forms.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog_app/: blog_confirm_delete.html  blog_detail.html  blog_list.html
config/: settings.py  urls.py
fixtures/: blog.json  client.json  groups.json  mailing.json  message.json  permissions.json  users.json
mailings/: apps.py  forms.py  manage.py  models.py  urls.py  views.py
mailings/fixtures/: message.json  users.json
mailings/mailings/: asgi.py  settings.py  urls.py  wsgi.py
mailings/management/commands/: fill_db.py  runapscheduler  runapscheduler.py
mailings/migrations/: 0001_initial.py  0002_client_owner_log_owner_mailing_owner_message_owner.py  0003_alter_mailing_status.py  0004_alter_mailing_options.py
mailings/templates/mailings_app/: base.html  client_list.html  index.html  logs_list.html  mailings_list.html  message_list.html
mailings/templates/mailings_app/includes/: inc_base.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_code.py  0003_alter_user_options.py
users/templates/users_app/: update_user.html  users_list.html
