[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = "Mailings"

authors = ["dyadyasawa <dyadyasawa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.24.0"
redis = "^5.0.4"
python-dotenv = "^1.0.1"
django-apscheduler = "^0.6.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
